--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-  </head>
-  <body>
-  </body>
+    <title>게임</title>
+</head>
+<body>
+    <script type="module" src="./src/index.js"></script>
+</body>
 </html>
